<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android = "http://schemas.android.com/apk/res/android"
        xmlns:app = "http://schemas.android.com/apk/res-auto"
        android:id = "@+id/special_genre_layout"
        android:background = "@drawable/curved_gradient_black"
        android:layout_width = "match_parent"
        android:layout_height = "match_parent">

    <com.google.android.material.appbar.AppBarLayout
            android:id = "@+id/special_genre_fragment_appbar"
            android:layout_height = "wrap_content"
            android:layout_width = "match_parent"
            android:background = "@android:color/transparent"
            android:paddingTop = "@dimen/status_bar_height"
            app:layout_scrollFlags = "scroll|noScroll"
            android:theme = "@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                app:layout_scrollFlags = "scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.Toolbar
                    android:id = "@+id/special_genre_fragment_toolbar"
                    android:layout_width = "match_parent"
                    android:layout_height = "wrap_content"
                    app:layout_collapseMode = "pin"
                    app:layout_scrollFlags = "scroll">
                <RelativeLayout
                        android:layout_width = "match_parent"
                        android:layout_height = "match_parent"
                        android:orientation = "horizontal">
                    <ImageView
                            android:id = "@+id/special_genre_fragment_back_arrow"
                            android:layout_width = "wrap_content"
                            android:layout_height = "wrap_content"
                            android:padding = "5dp"
                            android:layout_alignParentStart = "true"
                            android:src = "@drawable/ic_left_arrow" />
                    <TextView
                            android:id = "@+id/special_genre_fragment_top_title"
                            android:layout_width = "wrap_content"
                            android:layout_height = "wrap_content"
                            android:text = "Music"
                            android:layout_centerInParent = "true"
                            android:textStyle = "bold"
                            android:textColor = "@color/white"
                            android:textSize = "20sp"
                            android:alpha = "0"
                            android:gravity = "center" />
                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>
            <TextView
                    android:id = "@+id/special_genre_fragment_main_title"
                    android:layout_width = "match_parent"
                    android:layout_height = "match_parent"
                    android:paddingTop = "90dp"
                    android:paddingBottom = "40dp"
                    android:textSize = "50sp"
                    app:layout_collapseMode = "parallax"
                    app:layout_collapseParallaxMultiplier = "1.0"
                    android:text = "Music"
                    android:textStyle = "bold"
                    android:textColor = "@color/white"
                    android:gravity = "center" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:id = "@+id/special_genre_fragment_scroll_view"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:overScrollMode = "never"
            app:layout_behavior = "@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:orientation = "vertical"
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:paddingHorizontal = "20dp">

            <TextView
                    android:id = "@+id/special_genre_popular_playlists_text_view"
                    android:layout_width = "wrap_content"
                    android:layout_height = "wrap_content"
                    android:text = "@string/popular_playlists"
                    android:textColor = "@color/white"
                    android:textSize = "18sp"
                    android:textStyle = "bold"
                    android:layout_marginBottom = "15dp"
                    android:layout_gravity = "center_horizontal" />

            <androidx.recyclerview.widget.RecyclerView
                    android:id = "@+id/special_genre_top_playlists_recycler_view"
                    android:layout_width = "match_parent"
                    android:layout_height = "wrap_content"
                    android:nestedScrollingEnabled = "false"
                    android:layout_marginVertical = "20dp"
                    android:overScrollMode = "never" />

            <TextView
                    android:id = "@+id/special_genre_categories_text_view"
                    android:layout_width = "wrap_content"
                    android:layout_height = "wrap_content"
                    android:text = "@string/categories"
                    android:textColor = "@color/white"
                    android:textSize = "19sp"
                    android:textStyle = "bold"
                    android:layout_marginBottom = "15dp"
                    android:layout_gravity = "center_horizontal" />

            <androidx.recyclerview.widget.RecyclerView
                    android:id = "@+id/special_genre_categories_grid_view"
                    android:layout_width = "match_parent"
                    android:layout_height = "wrap_content"
                    android:overScrollMode = "never"
                    android:layout_marginBottom = "20dp"
                    android:gravity = "center" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>