<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android = "http://schemas.android.com/apk/res/android"
        xmlns:app = "http://schemas.android.com/apk/res-auto"
        android:id = "@+id/search_fragment_container"
        android:layout_width = "match_parent"
        android:background = "@drawable/curved_gradient_black"
        android:layout_height = "match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_height = "match_parent"
            android:layout_width = "match_parent"
            android:orientation = "vertical"
            android:scrollbars = "vertical">

        <com.google.android.material.appbar.AppBarLayout
                android:id = "@+id/genres_app_bar_layout"
                android:layout_height = "wrap_content"
                android:layout_width = "match_parent"
                android:background = "@android:color/transparent"
                android:padding = "14dp"
                android:theme = "@style/AppTheme.AppBarOverlay">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:layout_width = "match_parent"
                    android:layout_height = "wrap_content"
                    app:layout_scrollFlags = "scroll|exitUntilCollapsed">

                <TextView
                        android:id = "@+id/text"
                        android:layout_width = "match_parent"
                        android:layout_height = "wrap_content"
                        android:background = "@drawable/curved_gradient_black"
                        android:textSize = "50sp"
                        android:text = "@string/search"
                        android:minHeight = "?actionBarSize"
                        android:gravity = "center"
                        android:textColor = "@color/white"
                        android:textStyle = "bold"
                        android:paddingTop = "70dp"
                        android:layout_marginBottom = "20dp" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <TextView
                    android:id = "@+id/genres_search_bar_text_view"
                    android:layout_width = "match_parent"
                    android:paddingVertical = "15dp"
                    android:layout_marginTop = "@dimen/appbar_padding_top"
                    android:paddingHorizontal = "40dp"
                    android:layout_height = "wrap_content"
                    android:textSize = "20sp"
                    android:textStyle = "bold"
                    android:text = "@string/search_artists_songs_or_albums"
                    android:gravity = "center_horizontal"
                    android:textColor = "@color/lightGray"
                    android:background = "@drawable/rounded_corner_layout_white"
                    android:drawableTint = "@color/darkGray"
                    android:drawableStart = "@drawable/ic_search_unselected" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
                android:id = "@+id/search_genres_scroll_view"
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:overScrollMode = "never"
                android:paddingHorizontal = "14dp"
                app:layout_behavior = "@string/appbar_scrolling_view_behavior">
            <LinearLayout
                    android:layout_width = "match_parent"
                    android:layout_height = "wrap_content"
                    android:orientation = "vertical">

                <TextView
                        android:layout_width = "match_parent"
                        android:layout_height = "wrap_content"
                        android:text = "@string/your_top_genres"
                        android:textColor = "@color/white"
                        android:textSize = "20sp"
                        android:layout_marginVertical = "10dp"
                        android:textStyle = "bold" />
                <androidx.recyclerview.widget.RecyclerView
                        android:id = "@+id/search_top_genres_gridview"
                        android:layout_width = "match_parent"
                        android:layout_height = "wrap_content"
                        android:horizontalSpacing = "10dp"
                        android:overScrollMode = "never"
                        android:paddingEnd = "14dp"
                        android:gravity = "center" />
                <TextView
                        android:layout_width = "match_parent"
                        android:layout_height = "wrap_content"
                        android:text = "@string/browse_all"
                        android:textColor = "@color/white"
                        android:layout_marginVertical = "10dp"
                        android:textSize = "20sp"
                        android:textStyle = "bold" />
                <androidx.recyclerview.widget.RecyclerView
                        android:id = "@+id/search_browse_all_genres_gridview"
                        android:layout_width = "match_parent"
                        android:layout_height = "wrap_content"
                        android:isScrollContainer = "false"
                        android:paddingEnd = "14dp"
                        android:overScrollMode = "never"
                        android:gravity = "center" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <RelativeLayout
            android:id = "@+id/loading_view"
            android:layout_width = "match_parent"
            android:layout_height = "match_parent"
            android:background = "@color/darkGray">
        <ProgressBar
                android:id = "@+id/loading_home_progress"
                android:layout_width = "80dp"
                android:layout_height = "80dp"
                android:layout_centerInParent = "true" />
    </RelativeLayout>

</FrameLayout>
