...
        xmlns:app = "http://schemas.android.com/apk/res-auto"
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"
        android:orientation = "vertical"
        android:paddingTop = "@dimen/appbar_padding_top"
        android:background = "@color/darkGray"
        android:id = "@+id/charts_fragment_layout"
        tools:context = ".ui.search.ChartsFragment">

    <FrameLayout
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_marginTop = "@dimen/appbar_padding"
            android:background = "@color/midGray">
        <androidx.appcompat.widget.Toolbar
                android:id = "@+id/charts_fragment_toolbar"
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                app:navigationIcon = "@drawable/ic_left_arrow" />

        <TextView
                android:layout_width = "wrap_content"
...
                android:foreground = "@drawable/home_playlists_ripple"
                android:focusable = "true"
                android:layout_width = "175dp"
                android:layout_height = "wrap_content">

            <ImageView
                    android:id = "@+id/global_top_50_image"
                    android:layout_width = "match_parent"
                    android:layout_height = "175dp"
                    android:src = "@drawable/global_top_50" />

            <LinearLayout
                    android:layout_width = "wrap_content"
...
                        android:background = "@drawable/shuffle_rounded_corner"
                        android:backgroundTint = "@color/whitish_gray"
                        android:layout_marginEnd = "5dp"
                        android:layout_gravity = "center_vertical" />

                <TextView
                        android:id = "@+id/global_viral_50_sub_title"
                        android:layout_width = "wrap_content"
                        android:layout_height = "wrap_content"
                        android:layout_marginVertical = "5dp"
                        android:textColor = "@color/white"
                        android:textStyle = "bold"
                        android:textSize = "15sp"
...
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <TextView
            android:id = "@+id/top_charts_by_country_text_view"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:textColor = "@color/white"
            android:textSize = "17sp"
            android:textStyle = "bold"
            android:text = "@string/top_charts_by_country"
            android:drawableStart = "@drawable/ic_flag"
            android:padding = "20dp"
            android:drawablePadding = "10dp" />

    <TextView
            android:id = "@+id/viral_50_by_country_text_view"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:textColor = "@color/white"
            android:textSize = "17sp"
            android:textStyle = "bold"
            android:text = "@string/viral_50_by_country"
...
